--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Let's try keep this domain for site",
   "main": "index.js",
   "scripts": {
-    "clean": "rimraf .vuepress/dist",
     "predeploy": "now rm -y photos.now.sh",
     "deploy": "now --static --force --public --name=photos.now.sh deploy .vuepress/dist",
     "postdeploy": "now alias photos.now.sh",
     "start": "npm run serve",
     "serve": "vuepress dev",
+    "prebuild": "rimraf .vuepress/dist",
     "build": "vuepress build"
   },
   "repository": {
@@ -34,33 +34,5 @@
     "vuepress": "0.14.8",
     "vuepress-plugin-autonav": "0.1.2",
     "vuepress-theme-casper": "1.0.2"
-  },
-  "now": {
-    "version": "1.0.0-SNAPSHOT",
-    "name": "photos.now.sh",
-    "builds": [
-      {
-        "src": ".vuepress/dist/index.html",
-        "use": "@now/static"
-      }
-    ],
-    "alias": [
-      "photos",
-      "photos.now.sh"
-    ],
-    "static": {
-      "public": ".vuepress/dist",
-      "trailingSlash": false,
-      "renderSingle": true,
-      "unlisted": [
-        ".DS_Store",
-        ".git"
-      ]
-    },
-    "public": true,
-    "github": {
-      "enabled": false,
-      "autoAlias": false
-    }
   }
 }
