add foto and odessa domains

--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
   "name": "photos.now.sh",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Let's try keep this domain for site",
   "main": "index.js",
+  "author": "Maksim Kostromin <daggerok@gmail.com>",
   "scripts": {
     "predeploy": "now rm -y photos.now.sh",
     "deploy": "now --static --force --public --name=photos.now.sh deploy .vuepress/dist",
-    "postdeploy": "now alias photos.now.sh",
+    "postdeploy": "npm-run-all postdeploy:*",
+    "postdeploy:foto": "now alias foto.now.sh",
+    "postdeploy:fotos": "now alias fotos.now.sh",
+    "postdeploy:photos": "now alias photos.now.sh",
+    "postdeploy:odessa": "now alias odessa.now.sh",
+    "postdeploy:valery": "now alias valery.now.sh",
+    "postdeploy:valeria": "now alias valeria.now.sh",
+    "postdeploy:valeriya": "now alias valeriya.now.sh",
+    "postdeploy:malenkaya": "now alias malenkaya.now.sh",
+    "postdeploy:littlevalery": "now alias littlevalery.now.sh",
+    "postdeploy:little-valery": "now alias little-valery.now.sh",
+    "gh-pages": "cross-env NODE_ENV=gh-pages npm run build",
     "start": "npm run serve",
     "serve": "vuepress dev",
     "prebuild": "rimraf .vuepress/dist",
@@ -17,12 +29,11 @@
     "url": "git+https://github.com/daggerok/photos.now.sh.git"
   },
   "keywords": [],
-  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/daggerok/photos.now.sh/issues"
   },
-  "homepage": "https://github.com/daggerok/photos.now.sh#readme",
+  "homepage": "https://github.com/daggerok/photos.now.sh",
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "1.0.0-alpha.0",
     "@vuepress/plugin-blog": "1.0.0-alpha.0",
@@ -30,6 +41,10 @@
     "@vuepress/plugin-medium-zoom": "1.0.0-alpha.0",
     "@vuepress/plugin-pagination": "1.0.0-alpha.0",
     "@vuepress/plugin-search": "1.0.0-alpha.0",
+    "cross-env": "5.2.0",
+    "gh-pages": "2.0.1",
+    "now": "13.1.2",
+    "npm-run-all": "4.1.5",
     "rimraf": "2.6.3",
     "vuepress": "0.14.8",
     "vuepress-plugin-autonav": "0.1.2",
