--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "Maksim Kostromin <daggerok@gmail.com>",
   "scripts": {
     "predeploy": "now rm -y photos.now.sh",
-    "deploy": "now --static --force --public --name=photos.now.sh deploy .vuepress/dist",
+    "deploy": "now --force --public -V 2 --name=photos.now.sh deploy .vuepress/dist",
     "postdeploy": "npm-run-all postdeploy:*",
+    "postdeploy:val": "now alias val.now.sh",
     "postdeploy:foto": "now alias foto.now.sh",
     "postdeploy:fotos": "now alias fotos.now.sh",
     "postdeploy:photos": "now alias photos.now.sh",
@@ -48,6 +49,7 @@
     "rimraf": "2.6.3",
     "vuepress": "0.14.8",
     "vuepress-plugin-autonav": "0.1.2",
-    "vuepress-theme-casper": "1.0.2"
+    "vuepress-theme-casper": "1.0.2",
+    "webpack": "4.25.1"
   }
 }
